--- a/src/main/resources/sample/sample.fxml
+++ b/src/main/resources/sample/sample.fxml
@@ -1,8 +1,28 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.layout.StackPane?>
+<StackPane xmlns:fx="http://javafx.com/fxml"
+  fx:controller="sample.Controller">
+  <Label style="-fx-background-color: green" text="The label text"/>
+  <Button style="-fx-background-color: red" text="Button One"/>
+  <Label style="-fx-background-color: blue" text="The second label text"/>
+
+</StackPane>
+
+  <!--<?import javafx.scene.layout.FlowPane?>-->
+  <!--<?import javafx.scene.control.Button?>-->
+  <!--<?import javafx.scene.layout.TilePane?>-->
+  <!--<TilePane fx:controller="sample.Controller"-->
+  <!--xmlns:fx="http://javafx.com/fxml">-->
+  <!--<Button text="Button One"/>-->
+  <!--<Button text="Button Two"/>-->
+  <!--<Button text="Button Three"/>-->
+  <!--<Button text="Button Four"/>-->
+  <!--<Button text="Button Five"/>-->
+  <!--<Button text="Button Six"/>-->
+  <!--<Button text="Button Seven"/>-->
+  <!--<Button text="Button Eight"/>-->
+  <!--<Button text="Button Nine"/>-->
+  <!--<Button text="Button Ten"/>-->
+  <!--</TilePane>-->
+
