--- a/src/main/resources/sample/sample.fxml
+++ b/src/main/resources/sample/sample.fxml
@@ -1,28 +1,114 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.ChoiceBox?>
+
+<!--
 <StackPane xmlns:fx="http://javafx.com/fxml"
   fx:controller="sample.Controller">
   <Label style="-fx-background-color: green" text="The label text"/>
   <Button style="-fx-background-color: red" text="Button One"/>
   <Label style="-fx-background-color: blue" text="The second label text"/>
-
 </StackPane>
+-->
 
-  <!--<?import javafx.scene.layout.FlowPane?>-->
-  <!--<?import javafx.scene.control.Button?>-->
-  <!--<?import javafx.scene.layout.TilePane?>-->
-  <!--<TilePane fx:controller="sample.Controller"-->
-  <!--xmlns:fx="http://javafx.com/fxml">-->
-  <!--<Button text="Button One"/>-->
-  <!--<Button text="Button Two"/>-->
-  <!--<Button text="Button Three"/>-->
-  <!--<Button text="Button Four"/>-->
-  <!--<Button text="Button Five"/>-->
-  <!--<Button text="Button Six"/>-->
-  <!--<Button text="Button Seven"/>-->
-  <!--<Button text="Button Eight"/>-->
-  <!--<Button text="Button Nine"/>-->
-  <!--<Button text="Button Ten"/>-->
-  <!--</TilePane>-->
+<!--<?import javafx.scene.layout.FlowPane?>-->
+<!--<?import javafx.scene.control.Button?>-->
+<!--<?import javafx.scene.layout.TilePane?>-->
+<!--<TilePane fx:controller="sample.Controller"-->
+<!--xmlns:fx="http://javafx.com/fxml">-->
+<!--<Button text="Button One"/>-->
+<!--<Button text="Button Two"/>-->
+<!--<Button text="Button Three"/>-->
+<!--<Button text="Button Four"/>-->
+<!--<Button text="Button Five"/>-->
+<!--<Button text="Button Six"/>-->
+<!--<Button text="Button Seven"/>-->
+<!--<Button text="Button Eight"/>-->
+<!--<Button text="Button Nine"/>-->
+<!--<Button text="Button Ten"/>-->
+<!--</TilePane>-->
 
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.GridPane?>
+<GridPane fx:controller="sample.Controller"
+xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<Button GridPane.rowIndex="0" GridPane.columnIndex="0" text="Click me">
+  <graphic>
+    <ImageView>
+      <Image url="@cloud.png"/>
+    </ImageView>
+  </graphic>
+</Button>
+<Label GridPane.rowIndex="0" GridPane.columnIndex="1" text="This is a label"
+  textFill="blue">
+  <font>
+    <Font name="Arial italic" size="12"/>
+  </font>
+  <graphic>
+    <ImageView>
+      <Image url="@eco-house.png"/>
+    </ImageView>
+  </graphic>
+</Label>
+
+<fx:define>
+  <ToggleGroup fx:id="colorToggleGroup"/>
+</fx:define>
+<VBox GridPane.columnIndex="2">
+  <RadioButton text="Red" toggleGroup="$colorToggleGroup"/>
+  <RadioButton text="Blue" toggleGroup="$colorToggleGroup" selected="true"/>
+  <RadioButton text="Green" toggleGroup="$colorToggleGroup"/>
+</VBox>
+
+<VBox GridPane.rowIndex="0" GridPane.columnIndex="3">
+  <CheckBox text="Dog"/>
+  <CheckBox text="Cat"/>
+  <CheckBox text="Bird"/>
+</VBox>
+<HBox GridPane.rowIndex="0" GridPane.columnIndex="4">
+  <ToggleButton text="Toggle Me" />
+  <ToggleButton text="Hello" />
+  <ToggleButton text="Good-Bye" />
+</HBox>
+<TextField GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+<PasswordField GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+<ComboBox GridPane.rowIndex="1" GridPane.columnIndex="2" GridPane.columnSpan="2">
+  <items>
+    <FXCollections fx:factory="observableArrayList">
+      <String fx:value="This is Option 1"/>
+      <String fx:value="This is Option 2"/>
+      <String fx:value="This is Option 3"/>
+      <String fx:value="This is Option 4"/>
+      <String fx:value="This is Option 5"/>
+    </FXCollections>
+  </items>
+  <value>
+    <String fx:value="This is Option 4"/>
+  </value>
+</ComboBox>
+<ChoiceBox GridPane.rowIndex="1" GridPane.columnIndex="4">
+  <items>
+    <FXCollections fx:factory="observableArrayList">
+      <String fx:value="cb 1"/>
+      <String fx:value="cb 2"/>
+      <String fx:value="cb 3"/>
+      <String fx:value="cb 4"/>
+      <String fx:value="cb 5"/>
+    </FXCollections>
+  </items>
+</ChoiceBox>
+
+</GridPane>
